--- a/SAMPLE-install-inventory.yml
+++ b/SAMPLE-install-inventory.yml
@@ -11,6 +11,7 @@ all:
         simple.myforum.us:
           discourse_name: Your Name
           discourse_email: you@example.com
+          discourse_install_type: pro
           discourse_yml: web_only
           discourse_custom_plugins:
             - https://github.com/discourse/discourse-subscriptions.git
