more smtp stuff is required

--- a/SAMPLE-install-inventory.yml
+++ b/SAMPLE-install-inventory.yml
@@ -15,6 +15,7 @@ all:
           discourse_smtp_host: smtp-is-broken
           discourse_smtp_user: missing
           discourse_smtp_password: broken
+          discourse_smtp_port: 2525
           discourse_yml: web_only
           discourse_custom_plugins:
             - https://github.com/discourse/discourse-subscriptions.git
