--- a/SAMPLE-install-inventory.yml
+++ b/SAMPLE-install-inventory.yml
@@ -10,7 +10,7 @@ all:
       hosts:
         simple.myforum.us:
           discourse_name: Your Name
-          discourse_email: you@example.com
+          discourse_email: broken@none.invalid
           discourse_install_type: pro
           discourse_smtp_host: smtp-is-broken
           discourse_smtp_user: missing
